[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clinicaltriageenv"
version = "0.1.0"
description = "A Clinical Triage Environment for OpenEnv"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "pandas",
    "scikit-learn",
    "torch",
    "openenv",
    "fastapi",
    "uvicorn[standard]",
    "pydantic>=2.0",
    "openai",
    "python-dotenv",
    "requests"
]
