[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clinical-triage-env"
version = "0.1.0"
description = "Clinical Triage RL Environment for OpenEnv Hackathon"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Nishanth", email = "nishanthselvam9944@gmail.com" }
]
dependencies = [
    "numpy",
    "pandas",
    "gymnasium",
    "fastapi",
    "uvicorn",
    "requests",
    "openai",
    "python-dotenv",
    "pydantic>=2.0",
    "openenv"
]

[project.scripts]
openenv-env = "inference:main"

[tool.setuptools]
py-modules = ["inference"]

# This section is often required by Meta's OpenEnv validator
[tool.openenv]
entrypoint = "inference.py"
mode = "multi-mode"
