[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clinicaltriageenv"
version = "0.1.0"
description = "Clinical Triage RL Environment"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openenv-core>=0.2.0",
    "gymnasium",
    "numpy",
    "pandas",
    "fastapi",
    "uvicorn",
    "requests",
    "openai",
    "python-dotenv",
    "pydantic>=2.0"
]

[project.scripts]
server = "server.app:main"

[tool.setuptools]
packages = ["server", "env"]
